--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,17 +1,17 @@
 <idea-plugin>
   <id>com.your.company.unique.plugin.id</id>
   <name>Very Pink!</name>
-  <version>1.0</version>
+  <version>1.1</version>
   <vendor email="sneha.shinde350@gmail.com" url="https://www.cs.mcgill.ca/~sshind7/#">Sneha</vendor>
 
   <description><![CDATA[
-      Enter short description for your plugin here.<br>
-      <em>most HTML tags may be used</em>
+      A cute pink theme. <br>
+      Mostly for java right now
     ]]></description>
 
   <change-notes><![CDATA[
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>
+      Add basic functionality.<br>
+      <em>It works now :) It is cute and pink!</em>
     ]]>
   </change-notes>
 
